--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,6 +73,8 @@ services:
     depends_on:
       mlflow-server:
         condition: service_healthy
+      minio-init:
+        condition: service_completed_successfully
     networks:
       - mlflow-network
 
